--- a/src/pages/attendees/attendees.html
+++ b/src/pages/attendees/attendees.html
@@ -10,8 +10,12 @@
 </ion-header>
 
 <ion-content padding>
+  <ion-item>
+    <ion-input type="text" placeholder="search" [(ngModel)]="searchQuery" (input)="filterUsers()"></ion-input>
+  </ion-item>
+
   <ion-list>
-    <ion-item *ngFor="let user of users" (click)="showPerson(user)">
+    <ion-item *ngFor="let user of filteredUsers" (click)="showPerson(user)">
       <ion-grid >
         <ion-row>
             <ion-avatar>
