--- a/www/index.html
+++ b/www/index.html
@@ -52,7 +52,13 @@
   <!-- The main bundle js is generated during the build process -->
   <script src="build/main.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAXPOVSD8NfelyNlG_SXc6JAZeGoKML0nM" type="text/javascript"></script>
-
+  <script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('service-worker.js')
+        .then(() => console.log('service worker installed'))
+        .catch(err => console.log('Error', err));
+    }
+  </script>
 
 </body>
 
