Cordova browser config

--- a/src/pages/update-profile/update-profile.html
+++ b/src/pages/update-profile/update-profile.html
@@ -60,10 +60,10 @@
   </ion-list>
 
   <div style="text-align:center;">
-    <button round ion-button (click)="goToPage('saved')" color="nlgen">Save
+    <button round ion-button full (click)="goToPage('saved')" color="nlgen">Save
     </button>
     <br>
-    <button round ion-button (click)="goToPage('cancel')" color="nlgen">Cancel
+    <button round ion-button full (click)="goToPage('cancel')" color="nlgen">Cancel
     </button>
   </div>
 
