--- a/src/pages/signin/signin.html
+++ b/src/pages/signin/signin.html
@@ -5,7 +5,6 @@
   </a>
   <div style=" text-align: center;color:#00bfbb;font-size:110% ;font-weight: bold; margin-top: -50px; margin-bottom:40px">2018 NLG Tech Summit </div>
 
-  
   <ion-grid id="grid">
     <ion-row>
       <ion-col col-1></ion-col>
@@ -20,8 +19,9 @@
     <ion-row>
       <ion-col col-1></ion-col>
       <ion-col col-10>
-        <ion-input type="email" style="border: 1px solid gray" placeholder="Email Address" [(ngModel)]="email">
-        </ion-input>
+        <form (ngSubmit)="signin()">
+          <ion-input type="email" style="border: 1px solid gray" placeholder="Email Address" [(ngModel)]="email" [ngModelOptions]="{standalone: true}"></ion-input>
+        </form>
       </ion-col>
       <ion-col col-1></ion-col>
     </ion-row>
@@ -29,7 +29,9 @@
     <ion-row style="padding-top:10px;">
       <ion-col col-1></ion-col>
       <ion-col col-10>
-        <ion-input type="Password" style="border: 1px solid gray" placeholder="Password" [(ngModel)]="password"></ion-input>
+        <form (ngSubmit)="signin()">
+          <ion-input type="Password" style="border: 1px solid gray" placeholder="Password" [(ngModel)]="password" [ngModelOptions]="{standalone: true}"></ion-input>
+        </form>
       </ion-col>
       <ion-col col-1></ion-col>
     </ion-row>
@@ -50,12 +52,16 @@
           Sign up
         </a>
       </ion-col> -->
-      <ion-col col-8>
+      <ion-col col-6>
         <a href="#" id="resetPassLink" (click)="goToResetPassword()">
           Reset Password
         </a>
       </ion-col>
-      <ion-col col-1></ion-col>
+      <ion-col col-4 style="text-align:center">
+        <a href="#" (click)="goToPinCode()" style="color:#00bfbb">Don't have an account?
+          <span style="font-weight: bold;"> Enter your pincode</span>
+        </a>
+      </ion-col>
     </ion-row>
   </ion-grid>
 </ion-content>
