--- a/www/index.html
+++ b/www/index.html
@@ -2,9 +2,6 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <script data-ionic="inject">
-    (function(w){var i=w.Ionic=w.Ionic||{};i.version='3.9.2';i.angular='5.0.3';i.ionicNative='^2.9.0';i.staticDir='build/';})(window);
-  </script>
   <meta charset="UTF-8">
   <title>NLG Tech Summit 2018</title>
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -18,6 +15,7 @@
   <link rel="shortcut icon" href="assets/icon/favicon.ico"/>
   <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
   <link rel="manifest" href="manifest.json">
+  <link href="https://fonts.googleapis.com/css?family=Jura" rel="stylesheet">
   <meta name="theme-color" content="#4e8ef7">
 
   <!-- add to homescreen for ios -->
