--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -18,6 +18,7 @@
   <link rel="shortcut icon" href="assets/icon/favicon.ico"/>
   <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
   <link rel="manifest" href="manifest.json">
+  <link href="https://fonts.googleapis.com/css?family=Jura" rel="stylesheet">
   <meta name="theme-color" content="#4e8ef7">
 
   <!-- add to homescreen for ios -->
