--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -20,6 +20,7 @@
   <link rel="manifest" href="manifest.json">
   <link href="https://fonts.googleapis.com/css?family=Jura" rel="stylesheet">
   <meta name="theme-color" content="#4e8ef7">
+  <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet"> 
 
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes">
