--- a/src/pages/agenda/agenda.html
+++ b/src/pages/agenda/agenda.html
@@ -1,55 +1,56 @@
 <ion-header>
-    <ion-navbar color="nlgen">
-      <ion-title>Agenda</ion-title>
-      <button ion-button menuToggle>
-        <ion-icon name="menu"></ion-icon>
-      </button>
-    </ion-navbar>
-  </ion-header>
-  
-  <ion-content>
-    <ion-segment color="nlgen" id="segment" [(ngModel)]="day">
-      <ion-segment-button value="day1">
-        Day 1
-      </ion-segment-button>
-      <ion-segment-button value="day2">
-        Day 2
-      </ion-segment-button>
-    </ion-segment>
-  
-    <div [ngSwitch]="day">
-      <div *ngSwitchCase="day1">
-        <ion-list *ngFor="let session of day1List">
-          <ion-item text-wrap>
-            <h2 class='eventTitle'>
-              {{session.sessionName}}
-            </h2>
-          </ion-item>
-          <ion-item>
-            <h3 text-wrap class="eventSpeaker">
-              {{session.speaker}}
-            </h3>
-            <h3>{{session.time}}</h3>
-          </ion-item>
-        </ion-list>
-      </div>
-  
-      <div *ngSwitchCase="day2">
-        <ion-list *ngFor="let session of day2List">
-          <ion-item text-wrap>
-            <h2 class='eventTitle'>
-              {{session.sessionName}}
-            </h2>
-          </ion-item>
-          <ion-item>
-            <h3 text-wrap class="eventSpeaker">
-              {{session.speaker}}
-            </h3>
-            <h3>{{session.time}}</h3>
-          </ion-item>
-        </ion-list>
-      </div>
-  
+  <ion-navbar color="nlgen">
+    <ion-title>Agenda</ion-title>
+    <button ion-button menuToggle (click)="clearNotification()">
+      <ion-icon name="menu"></ion-icon>
+      <span *ngIf="newMsg" style="background-color: red;width: 0.5em;height: 0.5em;border-radius: 50%;position: absolute;bottom: 20%;right: 26%;"></span>
+    </button>
+  </ion-navbar>
+</ion-header>
+
+<ion-content>
+  <ion-segment color="nlgen" id="segment" [(ngModel)]="day">
+    <ion-segment-button value="day1">
+      Day 1
+    </ion-segment-button>
+    <ion-segment-button value="day2">
+      Day 2
+    </ion-segment-button>
+  </ion-segment>
+
+  <div [ngSwitch]="day">
+    <div *ngSwitchCase="day1">
+      <ion-list *ngFor="let session of day1List">
+        <ion-item text-wrap>
+          <h2 class='eventTitle'>
+            {{session.sessionName}}
+          </h2>
+        </ion-item>
+        <ion-item>
+          <h3 text-wrap class="eventSpeaker">
+            {{session.speaker}}
+          </h3>
+          <h3>{{session.time}}</h3>
+        </ion-item>
+      </ion-list>
     </div>
-  
-  </ion-content>
+
+    <div *ngSwitchCase="day2">
+      <ion-list *ngFor="let session of day2List">
+        <ion-item text-wrap>
+          <h2 class='eventTitle'>
+            {{session.sessionName}}
+          </h2>
+        </ion-item>
+        <ion-item>
+          <h3 text-wrap class="eventSpeaker">
+            {{session.speaker}}
+          </h3>
+          <h3>{{session.time}}</h3>
+        </ion-item>
+      </ion-list>
+    </div>
+
+  </div>
+
+</ion-content>
